# sae-utils

./: .gitignore  README.md  config.json  config.py  hooking.py  main.py  pyproject.toml  train_sae.py
src/sae_utils/: __init__.py  _version.py  activations.py  config.py  dataset.py  losses.py  model.py  normalization.py  sae.py  train.py
tests/: test_activations.py  test_config.py  test_dataset.py  test_normalization.py  test_version.py
