[project]
name = "sae-utils"
version = "0.0.1"
description = "Utilities to train Sparse AutoEncoders"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Francesco Marchisotti", email = "francesco.marchisotti@gmail.com" },
    { name = "Francesco Cozzi" },
]
requires-python = ">=3.11"
dependencies = [
    "numpy<2; sys_platform == 'darwin' and platform_machine != 'arm64'",
    "numpy; sys_platform != 'darwin' or platform_machine == 'arm64'",
    "geom-median>=0.1.0",
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine != 'arm64'",
    "torch; sys_platform != 'darwin' or platform_machine == 'arm64'",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
