[project]
name = "sae-utils"
version = "0.0.2.dev2"
description = "Utilities to train Sparse AutoEncoders"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Francesco Cozzi" },
    { name = "Francesco Marchisotti", email = "francesco.marchisotti@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "numpy<2; sys_platform == 'darwin' and platform_machine != 'arm64'",
    "numpy; sys_platform != 'darwin' or platform_machine == 'arm64'",
    "geom-median>=0.1.0",
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine != 'arm64'",
    "torch; sys_platform != 'darwin' or platform_machine == 'arm64'",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.4.2", "pytest-cov>=7.0.0"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=sae_utils --cov-report=html"
testpaths = ["tests"]

[tool.ruff]
extend = "~/.config/ruff/ruff.toml"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Ignore use of assert in tests
    "ARG",     # flake8-unused-arguments
    "FBT",     # flake8-boolean-trap
    "PLR2004", # magic-value-comparison
    "S311",    # suspiciuous-non-cryptographic-random-usage
    "SLF001",  # Private member accessed
]
